# arxai

./: .gitignore  ANNOTATION_FEATURES.md  IMPLEMENTATION_SUMMARY.md  RATE_LIMITING.md  README.md  STORAGE_SETUP.md  USAGE.md  algo.py  algorithm.md  api.py  arxai.py  arxiv_annotator.py  cache.py  cli.py  demo_stream.py  direct_ranking.py  download.py  main.py  orchestrator.py  pdf_processor.py  pyproject.toml  quality_research.py  requirements.txt  search.py  simple_pipeline.py  storage.py  stream_server.py  upload_pdfs_to_supabase.py  viewer.html
annotation-viewer/: upload-pdfs.js
annotation-viewer/app/: globals.css  layout.tsx  page.tsx
